--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tisai</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>TISAI</title>
+    <meta name="description" content="Toplu İş Sözleşmesi Otomasyon Sistemi" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="tisai" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="TISAI" />
+    <meta property="og:description" content="Toplu İş Sözleşmesi Otomasyon Sistemi" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://r.resimlink.com/umGcjDVBy03d.jpeg" />
 
