--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://r.resimlink.com/umGcjDVBy03d.jpeg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://r.resimlink.com/umGcjDVBy03d.jpeg" />
+    <meta name="twitter:card" content="" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
